--- a/LCTMoodle/Views/BaiTapNop/_DanhSachNop.cshtml
+++ b/LCTMoodle/Views/BaiTapNop/_DanhSachNop.cshtml
@@ -1,5 +1,5 @@
-﻿@model List<DTOLayer.BaiTapNopDTO>
-@using LCTMoodle.LCTHtml
+﻿@using LCTMoodle.LCTView
+@model List<DTOLayer.BaiTapNopDTO>
 
 <article class="hop hop-1-vien">
     <section class="tieu-de">
@@ -33,7 +33,7 @@
                             <section class="phai">
                                 <section class="thong-tin">
                                     <a class="nguoi-nop" href="#">
-                                        @NguoiDungHtml.link(baiNop.nguoiTao)
+                                        @NguoiDungView.link(baiNop.nguoiTao)
                                     </a>
                                     <span class="thoi-gian">
                                         @baiNop.thoiDiemTao.Value.ToString("H:mm d/M/yyyy")
