--- a/LCTMoodle/Views/BaiVietBaiTap/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiTap/_Khung.cshtml
@@ -2,14 +2,14 @@
 
 <section class="hop hop-2-vien">
     <section class="tieu-de">
-        Đăng bài viết
+        Đăng bài tập cho các học viên
     </section>
     @Html.Partial("~/Views/BaiVietBaiTap/_Form.cshtml", null, new ViewDataDictionary() { { "MaKhoaHoc", ViewData["MaKhoaHoc"].ToString() } })
 </section>
 
 <section class="hop">
     <section class="tieu-de">
-        Danh sách bài viết
+        Danh sách bài tập đã được giao
     </section>
     <ul id="danh_sach_bai_viet" class="noi-dung">
         @if (Model != null)
