--- a/LCTMoodle/Views/BangDiem/Tao.cshtml
+++ b/LCTMoodle/Views/BangDiem/Tao.cshtml
@@ -11,6 +11,12 @@
         khoaHoc.ten, "/KhoaHoc/" + khoaHoc.ma,
         "Quản lý cột điểm", "/BangDiem/Tao/" + khoaHoc.ma
     };
+
+    ViewData["ChucNang"] = new List<string>()
+    {
+        "Xem bảng điểm",
+        "href='/KhoaHoc/Xem-BangDiem/" + khoaHoc.ma + "'"
+    };
 }
 @section Styles {
     <link href="/Tao.css/BangDiem" rel="stylesheet" />
