--- a/LCTMoodle/Views/ChuDe/_Chon.cshtml
+++ b/LCTMoodle/Views/ChuDe/_Chon.cshtml
@@ -1,33 +1,20 @@
-﻿@model List<DTOLayer.ChuDeDTO>
+﻿@model DTOLayer.ChuDeDTO
 @{
-    bool coQuyenTao = ViewData["QuyenTao"] != null && (bool)ViewData["QuyenTao"];
-
-    var chuDe = ViewData["ChuDe"] == null ? null : ViewData["ChuDe"] as DTOLayer.ChuDeDTO;
+    var dsCon = ViewData["DSCon"] as List<DTOLayer.ChuDeDTO>;
 }
 
 <section id="khung_chu_de" class="noi-dung lct-cay" data-ma="0" data-chon>
     <section class="cay">
         <ul id="khung_cay" class="nut">
-            @if (chuDe == null)
+            @Html.Partial("~/Views/ChuDe/_Cay_Item.cshtml", dsCon, new ViewDataDictionary()
             {
-                @Html.Partial("~/Views/ChuDe/_Cay_Item.cshtml", Model, new ViewDataDictionary()
-                {
-                    { "Ma", 0 },
-                    { "Ten", "Danh sách" }
-                })   
-            }
-            else
-            {
-                @Html.Partial("~/Views/ChuDe/_Cay_Item.cshtml", Model, new ViewDataDictionary()
-                {
-                    { "Ma", chuDe.ma },
-                    { "Ten", chuDe.ten }
-                }) 
-            }
+                { "Ma", Model == null ? 0 : Model.ma },
+                { "Ten", Model == null ? "Danh sách" : Model.ten }
+            }) 
         </ul>
     </section>
     <section class="con">
-        <ul id="khung_danh_sach" class="khung-danh-sach">@Html.Partial("~/Views/ChuDe/_DanhSach.cshtml", Model, new ViewDataDictionary() { { "CoChon", true } })</ul>
+        <ul id="khung_danh_sach" class="khung-danh-sach">@Html.Partial("~/Views/ChuDe/_DanhSach.cshtml", dsCon, new ViewDataDictionary() { { "CoChon", true } })</ul>
         <a data-chuc-nang="tao">
             <i class="pe-7s-plus"></i>
             Hiện chưa có nút con, hãy tạo một nút con mới
@@ -43,14 +30,11 @@
                     <u></u>
                 </a>
             </li>   
-            @if (coQuyenTao)
-            {
-                <li>
-                    <a data-chuc-nang="tao" class="pe-7s-plus">
-                        <u></u>
-                    </a>
-                </li>   
-            }
+            <li>
+                <a data-chuc-nang="tao" class="pe-7s-plus">
+                    <u></u>
+                </a>
+            </li>   
         </ul>
     </section>
 </section>
