--- a/LCTMoodle/Views/Quyen/_Item_NguoiDung.cshtml
+++ b/LCTMoodle/Views/Quyen/_Item_NguoiDung.cshtml
@@ -1,9 +1,9 @@
-﻿@using LCTMoodle.LCTHtml
+﻿@using LCTMoodle.LCTView
 @model DTOLayer.NguoiDungDTO
 
 <li data-doi-tuong="item-nguoi-dung" class="item" data-ma="@Model.ma">
     <img src="/boy.png/" />
-    <a href="#">@NguoiDungHtml.link(Model)</a>
+    <a href="#">@NguoiDungView.link(Model)</a>
     <section class="khung-chuc-nang-lct">
         <ul data-doi-tuong="cnnd-@Model.ma">
             <li>
