Cap Nhat Vote Diem

--- a/LCTMoodle/Views/HoiDap/_Item_CauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Item_CauHoi.cshtml
@@ -48,7 +48,7 @@
                 <i class="arrow-down" data-chuc-nang="tru-diem"></i>
             </div>
 
-            <div class="thoi-gian">@Model.thoiDiemTao</div>
+            <div class="thoi-gian">@Model.thoiDiemCapNhat</div>
         </section>
 
         <section class="chi-tiet">
