--- a/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
@@ -46,12 +46,14 @@
                             </div>
                         </a>
                     }
+                    
                     <div class="diem-so">
-                        <i class="arrow-up"></i>
-                        <span class="so">@Model.diem</span>
-                        <i class="arrow-down"></i>
+                        <i class="arrow-up" data-chuc-nang="cong-diem"></i>
+                        <span class="so" data-doi-tuong="diem-so">@Model.diem</span>
+                        <i class="arrow-down" data-chuc-nang="tru-diem"></i>
                     </div>
-                    <div class="thoi-gian">@Model.thoiDiemCapNhat</div>
+
+                    <div class="thoi-gian" data-chuc-nang="tru-diem">@Model.thoiDiemCapNhat</div>
                 </section>
 
                 <section class="chi-tiet">
