--- a/LCTMoodle/Views/NguoiDung/Xem.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Xem.cshtml
@@ -14,6 +14,8 @@
         chucNang.Add("href='/NguoiDung/DoiMatKhau/'");
 
         ViewData["ChucNang"] = chucNang;
+        
+        
     }
     
 }
@@ -111,15 +113,19 @@
     </section>
     
     <section id="khung_hien_thi" class="khung-hien-thi">
+
         <div id="nhiemvumoi" class="noi-dung active">           
-            <p align="center">Chưa có nhiệm vụ mới</p>       
+            <p class="empty">Chưa có nhiệm vụ mới</p>       
         </div>
+
         <div id="baigiangmoi" class="noi-dung">
-            <p align="center">Chưa có bài giảng mới</p>
+            <p class="empty">Chưa có bài giảng mới</p>
         </div>
+
         <div id="baitapmoi" class="noi-dung">
-            <p align="center">Chưa có bài tập mới</p>
+            <p class="empty">Chưa có bài tập mới</p>
         </div>
+
     </section>
 </section>
 
