--- a/LCTMoodle/Views/HoiDap/_DanhSachCauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_DanhSachCauHoi.cshtml
@@ -2,8 +2,8 @@
 
 @if (Model != null)
 {
-    for (int i = (Model.Count - 1); i >= 0; i--)
+    foreach(var cauHoi in Model)
     {
-        @Html.Partial("~/Views/HoiDap/_Item_DanhSachCauHoi.cshtml", Model[i])
+        @Html.Partial("~/Views/HoiDap/_Item_DanhSachCauHoi.cshtml", cauHoi)
     }
 }
