--- a/LCTMoodle/Views/HoiDap/_Form_CauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Form_CauHoi.cshtml
@@ -24,7 +24,14 @@
             <li>
                 <section class="noi-dung">
                     <article class="input">
-                        <input name="MaChuDe" data-input-type="chu-de" data-ma-mac-dinh="@(Model.chuDe != null ? Model.chuDe.ma : null)" data-ten-mac-dinh="@(Model.chuDe != null ? Model.chuDe.ten : null)" placeholder="Tìm và chọn chủ đề" />
+                        @if(Model != null)
+                        {
+                            <input name="MaChuDe" data-input-type="chu-de" data-ma-mac-dinh="@(Model.chuDe != null ? Model.chuDe.ma : null)" data-ten-mac-dinh="@(Model.chuDe != null ? Model.chuDe.ten : null)" placeholder="Tìm và chọn chủ đề" />
+                        }
+                        else
+                        {
+                            <input name="MaChuDe" data-input-type="chu-de" placeholder="Tìm và chọn chủ đề" />
+                        }
                     </article>
                 </section>
             </li>        
