--- a/LCTMoodle/Views/BaiVietBaiGiang/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiGiang/_Khung.cshtml
@@ -1,11 +1,35 @@
-﻿@model List<DTOLayer.BaiVietBaiGiangDTO>
+﻿@using Helpers
+@using LCTMoodle.LCTView
+@model List<DTOLayer.BaiVietBaiGiangDTO>
+@{
+    var maKhoaHoc = (int)ViewData["MaKhoaHoc"];
+    var maNguoiDung = Session["NguoiDung"] as int?;
 
-<section class="hop hop-2-vien">
-    <section class="tieu-de">
-        Đăng bài giảng cho khóa học
-    </section>
-    @Html.Partial("~/Views/BaiVietBaiGiang/_Form.cshtml", null, new ViewDataDictionary() { { "MaKhoaHoc", ViewData["MaKhoaHoc"].ToString() } })
-</section>
+    string[] dsQuyen;
+    bool coQuyenThem;
+        
+    if (maNguoiDung.HasValue)
+    {
+        dsQuyen = QuyenView.layDSQuyen("KH", maKhoaHoc, maNguoiDung);
+
+        coQuyenThem = QuyenHelper.co(dsQuyen, "BG_Them");
+    }
+    else
+    {
+        dsQuyen = null;
+        coQuyenThem = false;
+    }
+}
+
+@if (coQuyenThem)
+{
+    <section class="hop hop-2-vien">
+        <section class="tieu-de">
+            Đăng bài giảng cho khóa học
+        </section>
+        @Html.Partial("~/Views/BaiVietBaiGiang/_Form.cshtml", null, new ViewDataDictionary() { { "MaKhoaHoc", ViewData["MaKhoaHoc"].ToString() } })
+    </section>   
+}
 
 <section class="hop">
     <section class="tieu-de">
@@ -16,7 +40,10 @@
         {
             foreach (var baiViet in Model)
             {
-                @Html.Partial("~/Views/BaiVietBaiGiang/_Item.cshtml", baiViet);
+                @Html.Partial("~/Views/BaiVietBaiGiang/_Item.cshtml", baiViet, new ViewDataDictionary() { 
+                    { "DSQuyen", dsQuyen },
+                    { "MaKhoaHoc", maKhoaHoc }
+                });
             }    
         }
     </ul>
