--- a/LCTMoodle/Views/BangDiem/Tao.cshtml
+++ b/LCTMoodle/Views/BangDiem/Tao.cshtml
@@ -65,7 +65,7 @@
                     <section class="tr">
                         <section class="td"></section>
                         <section class="td">
-                            <input type="hidden" name="KhoaHoc" value="@khoaHoc.ma" />
+                            <input type="hidden" name="MaKhoaHoc" value="@khoaHoc.ma" />
                             <article class="input">
                                 <input data-validate="bat-buoc" type="text" name="Ten" placeholder="Tên cột điểm" />
                             </article>
